Fix text tag and category text overflow

--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -11,24 +11,22 @@
 
 .post>header .meta .published {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 0.7em;
-  font-weight: 800;
-  letter-spacing: 0.25em;
   text-transform: uppercase;
 }
 
 body, input, select, textarea {
-  color: #333333;
   font-family: "Source Sans Pro", sans-serif;
-  line-height: 1.75em;
 }
 
 h1, h2, h3, h4, h5, h6 {
   text-transform: none;
-  letter-spacing: 0.1em;
   font-family: "Source Sans Pro", sans-serif;
 }
 
 div.title a {
   font-family: "Source Sans Pro", sans-serif;
+}
+
+.post>footer .stats li ul li a {
+  overflow: visible;
 }
